# webhook-handler

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: call.rs  generic_format_io.rs  main.rs  payload.rs  provider.rs  serde_integration.rs
src/call/: api_key.rs  imp.rs
src/call/imp/: api_key_impls.rs
src/config/: config.rs
src/generic_format_io/: handler.rs  incoming.rs  outgoing.rs
src/payload/: discord.rs  todoist.rs
src/provider/: all.rs
src/serde_integration/: deserializers.rs
