[package]
name = "webhook-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# version: get rid of "there is no reactor running, must be called from the context of a Tokio 1.x runtime"
# feature/rustls: some service requires HTTPS connection, we should accept those connection.
actix-web = { version = "4.0.0-beta.21", features = [ "rustls" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
qstring = "0.7.2"
once_cell = "1.13.1"
iso8601 = "0.5"
reqwest = { version = "0.11", features = [ "json" ] }
anyhow = "1.0"
rustls = "0.20"
# this crate is needed for pem-file handling
rustls-pemfile = "1.0"
rand = "0.8"
rand_chacha = "0.3"
base64 = { version = "0.13.0" }
log = "0.4"
fern = { version = "0.6", features = [ "colored" ] }
chrono = "0.4"