[package]
name = "webhook-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# version: get rid of "there is no reactor running, must be called from the context of a Tokio 1.x runtime"
# feature/rustls: some service requires HTTPS connection, we should accept those connection.
actix-web = { version = "4.4.0", features = [ "rustls" ] }
serde = { version = "1.0.193", features = [ "derive" ] }
serde_json = "1.0.108"
qstring = "0.7.2"
once_cell = "1.19.0"
iso8601 = "0.6.1"
reqwest = { version = "0.12.2", features = [ "json" ] }
anyhow = "1.0.77"
rustls = "0.20.9"
# this crate is needed for pem-file handling
rustls-pemfile = "1.0.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
base64 = { version = "0.21.5" }
log = "0.4.20"
fern = { version = "0.6.2", features = [ "colored" ] }
chrono = "0.4.35"